# video-classification

./: .gitignore  README.md  classification.py
evaluation/: README.md  crosseval.py  plot_training_log.py
image_classification/: .gitignore  CMakeLists.txt
image_classification/cmake/: GitRevision.cmake
image_classification/resources/: files.txt
image_classification/resources/model/: deploy.prototxt
image_classification/src/: forwarddeclarations.hpp  heatmap.cpp  main.cpp  main.hpp  util.cpp  util.hpp
image_classification/src/classification/: caffe_classifier.cpp  caffe_classifier.hpp  evaluation.cpp  evaluation.hpp
image_classification/src/io/: file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp
image_cleansing/: .gitignore  CMakeLists.txt  README.md  decentModel.xml
image_cleansing/cmake/: FindBoost.cmake
image_cleansing/src/: forwarddeclarations.hpp  main.cpp  main.hpp
image_cleansing/src/histogram/: histogram.cpp  histogram.hpp
image_cleansing/src/image_data/: file_reader.cpp  file_reader.hpp  image.cpp  image.hpp
image_cleansing/src/output/: file_writer.cpp  file_writer.hpp
image_cleansing/src/svm/: svm.cpp  svm.hpp
models/: deploy.prototxt  label_mapping.txt
models/image_classification/: deploy_image.prototxt
mpss2015/: .gitignore  CMakeLists.txt  README.md  make  mpss2015-config.cmake  output.tmp  run  runAll  runDebug
mpss2015/cmake/: PlatformLinuxGCC.cmake
mpss2015/data/: ucfdata
mpss2015/source/: CMakeLists.txt  mpss2015-version.h.in
mpss2015/source/ofextract/: CMakeLists.txt
mpss2015/source/ofextract/include/ofextract/: BroxOpticalFlow.h  Fibonacci.h  ofextract_api.h
mpss2015/source/ofextract/source/: BroxOpticalFlow.cpp  Fibonacci.cpp
mpss2015/source/ofextractcmd/: CMakeLists.txt  main.cpp
nets/activity_recognition/: .gitignore  deploy.prototxt  make_some_nice_plots.sh  net.prototxt  plot_log.gnuplot  solver.prototxt  test_activity_recognition.sh  train_activity_recognition.sh  train_dummy.sh
nets/activity_recognition/caffenet/: deploy.prototxt  proper.prototxt  solver.prototxt
nets/activity_recognition/oxfordnet/: net.prototxt
nets/flow/: flow_net.prototxt  net.prototxt  solver.prototxt  train_flow_net.sh  train_val.prototxt  training.sh
nets/flow/CNN_M/: net.prototxt  solver.prototxt
nets/flow/arch-caffenet/: flow_net.prototxt  net.prototxt  solver.prototxt
nets/flow/arch-easy/: net.prototxt  solver.prototxt
nets/fudan/: net.prototxt  solver.prototxt  train_fudan.sh
nets/fusion/: net.prototxt  solver.prototxt  training.sh
nets/spatial/: solver.prototxt  train_val.prototxt  training.sh
nets/svm/: net.prototxt  net_alternative.prototxt  solver.prototxt  training.sh
paper/: .gitignore  Makefile  paper.bib  paper.tex
paper/images/: architecture.eps  early_fusion.eps  fusion_architecture.eps  fusion_svm.eps  late_fusion.eps  net_architecture.eps  optical_flow.eps
paper/sections/: 01_introduction.tex  02_related.tex  02_related_work.tex  03_data.tex  04_classification.tex  05_conclusion.tex  05_web.tex  06_scripts.tex
playground/: googlenet-test.py
playground/deepdream/: dream.ipynb  run_notebook.sh
playground/deepdream/.ipynb_checkpoints/: dream-checkpoint.ipynb
tools/: build_flow_lmdb.sh  collect_image_files.py  crop_mirror_frames.py  frame_extraction.sh  frame_extraction_force_overwrite.sh  frames_to_file_ucf_flow.py  frames_to_file_ucf_flow_cropped.py  frames_to_file_ucf_static.py  frames_to_hdf5.py  listfile_to_file_ucf_static.py  remove_duplicate_frame.py  resize.py  sce_frames.sh
web_server/: README.md  fake_ofextractcmd.sh  files.json  files.json.default  flask_extensions.py  install  package.json  requirements.txt  server.py  webpack.config.js
web_server/blueprints/: __init__.py  frontend_blueprint.py  image_blueprint.py  video_blueprint.py
web_server/client/: index.html
web_server/client/scripts/: main.jsx  routes.jsx
web_server/client/scripts/actions/: itemActions.js  routerActions.js  syncActions.js  videoActions.js
web_server/client/scripts/components/: barchart.jsx  baseComponent.jsx  fileInput.jsx  header.jsx  imageCard.jsx  itemList.jsx  progressBar.jsx  spinner.jsx  tabs.jsx  videoCapture.jsx
web_server/client/scripts/lib/: api.js  fetchUtils.js  reactUtils.js  routes.jsx
web_server/client/scripts/mixins/: generalMixin.js
web_server/client/scripts/pages/: app.jsx  home.jsx  imageUpload.jsx  info.jsx  notFound.jsx  result.jsx  videoUpload.jsx
web_server/client/scripts/stores/: imageStore.js  itemStore.js  resultStore.js  videoStore.js
web_server/client/styles/: main.less  result-page.less
web_server/server/: __init__.py  server.py
web_server/videos/examples/: video1.webm  video2.avi  video2.webm  video3.avi  video3.webm
